@@ -1,3 +1,8 @@
+2006-09-12  John Ehresman  <jpe@wingware.com>
+
+	* gobject/pygobject.h (init_pygobject_check): Declare variables
+	at start of code block
+
 2006-09-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gobject/pygmainloop.c (pyg_signal_watch_prepare): Increase the timeout
